--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://localhost:3306/modulo8?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=jere2015
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Ambiente local
+#spring.datasource.url = jdbc:mysql://localhost:3306/modulo8?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=jere2015
+
+#Ambiente Produccion
+spring.datasource.url = jdbc:mysql://u5og10diqmxtikas:9EqnQROMEoRM2FC1pJrm@basv4bbgcdtlgyyju1qy-mysql.services.clever-cloud.com:3306/basv4bbgcdtlgyyju1qy
+spring.datasource.username=u5og10diqmxtikas
+spring.datasource.password=9EqnQROMEoRM2FC1pJrm
